crates/rome_js_formatter/tests/specs/prettier/js/partial-application/test.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
---

# Input

```js
const addOne = add(1, ?); // apply from the left
addOne(2); // 3

const addTen = add(?, 10); // apply from the right
addTen(2); // 12

// with pipeline
let newScore = player.score
  |> add(7, ?)
  |> clamp(0, 100, ?); // shallow stack, the pipe to `clamp` is the same frame as the pipe to `add`.
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -5,4 +5,6 @@
 addTen(2); // 12
 
 // with pipeline
-let newScore = player.score |> add(7, ?) |> clamp(0, 100, ?); // shallow stack, the pipe to `clamp` is the same frame as the pipe to `add`.
+let newScore = player.score
+  |> add(7, ?)
+  |> clamp(0, 100, ?); // shallow stack, the pipe to `clamp` is the same frame as the pipe to `add`.
```

# Output

```js
const addOne = add(1, ?); // apply from the left
addOne(2); // 3

const addTen = add(?, 10); // apply from the right
addTen(2); // 12

// with pipeline
let newScore = player.score
  |> add(7, ?)
  |> clamp(0, 100, ?); // shallow stack, the pipe to `clamp` is the same frame as the pipe to `add`.
```


# Errors
```
error[SyntaxError]: expected an expression but instead found '?'
  ┌─ test.js:1:23
  │
1 │ const addOne = add(1, ?); // apply from the left
  │                       ^ Expected an expression here

error[SyntaxError]: expected an expression but instead found '?, 10'
  ┌─ test.js:4:20
  │
4 │ const addTen = add(?, 10); // apply from the right
  │                    ^^^^^ Expected an expression here

error[SyntaxError]: Expected an expression for the left hand side of the `>` operator.
  ┌─ test.js:9:4
  │
9 │   |> add(7, ?)
  │    ^ This operator requires a left hand side value

error[SyntaxError]: expected an expression but instead found '?'
  ┌─ test.js:9:13
  │
9 │   |> add(7, ?)
  │             ^ Expected an expression here

error[SyntaxError]: Expected an expression for the left hand side of the `>` operator.
   ┌─ test.js:10:4
   │
10 │   |> clamp(0, 100, ?); // shallow stack, the pipe to `clamp` is the same frame as the pipe to `add`.
   │    ^ This operator requires a left hand side value

error[SyntaxError]: expected an expression but instead found '?'
   ┌─ test.js:10:20
   │
10 │   |> clamp(0, 100, ?); // shallow stack, the pipe to `clamp` is the same frame as the pipe to `add`.
   │                    ^ Expected an expression here


```

# Lines exceeding max width of 80 characters
```
   10:   |> clamp(0, 100, ?); // shallow stack, the pipe to `clamp` is the same frame as the pipe to `add`.
```

